--- a/po/hr.po
+++ b/po/hr.po
@@ -1,4 +1,4 @@
-# French translation for menulibre
+# Croatian translation for menulibre
 # Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
 # This file is distributed under the same license as the menulibre package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
@@ -8,34 +8,34 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-10-24 07:29-0400\n"
-"PO-Revision-Date: 2012-10-28 09:27+0000\n"
-"Last-Translator: mimilus <Unknown>\n"
-"Language-Team: French <fr@li.org>\n"
+"PO-Revision-Date: 2012-10-22 17:42+0000\n"
+"Last-Translator: gogo <trebelnik2@gmail.com>\n"
+"Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 14:44+0000\n"
+"X-Launchpad-Export-Date: 2012-11-25 14:40+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Sélectionner une icône"
+msgstr "Odaberi Ikonu"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Nom de l'icône"
+msgstr "Naziv ikone"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Fichier Image"
+msgstr "Datoteka slike"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Sélectionner une image"
+msgstr "Odaberi sliku"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Sélectionner une icône</b>"
+msgstr "<b>Odaberi Ikonu</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -59,11 +59,11 @@ msgstr "128x128"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "<b>Preview</b>"
-msgstr "<b>Aperçu</b>"
+msgstr "<b>Pogled</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Sélectionner une icône"
+msgstr "Odaberi ikonu"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -71,143 +71,143 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "_File"
-msgstr "_Fichier"
+msgstr "_Datoteka"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Ajouter un _Nouveau Lanceur"
+msgstr "Dodaj _novi pokretač"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
-msgstr "_Éditer"
+msgstr "_Uredi"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Help"
-msgstr "_Aide"
+msgstr "_Pomoć"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Contents"
-msgstr "_Contenus"
+msgstr "_Sadržaj"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Add Launcher"
-msgstr "Ajouter un lanceur"
+msgstr "Dodaj pokretač"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Enregistrer toutes les modifications"
+msgstr "Spremi sve promjene"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
-msgstr "Enregistrer"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Annuler la dernière action"
+msgstr "Poništi zadnju radnju"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
-msgstr "Annuler"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Rétablir la dernière action annulée"
+msgstr "Vrati zadnje poništenu radnju"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
-msgstr "Répéter"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Revert all changes to last saved state"
-msgstr "Annuler toutes les modifications du dernier état sauvé"
+msgstr "Vrati sve stavke na posljednje spremljeno stanje"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Réinitialiser"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
-msgstr "Catégorie"
+msgstr "Kategorija"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
-msgstr "Application"
+msgstr "Aplikacija"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "<b>No applications found.</b>"
-msgstr "<b>Pas d'application trouvée.</b>"
+msgstr "<b>Nema pronađenih aplikacija.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Try searching everything."
-msgstr "Essayez de chercher tout."
+msgstr "Probaj pretražiti sve."
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nom Application</b></big>"
+msgstr "<big><b>Naziv aplikacije</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "<i>A quick snippet about your application.</i>"
-msgstr "<i>Un extrait rapide à propos de votre application.</i>"
+msgstr "<i>Kratak opis vaše aplikacije.</i>"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Command"
-msgstr "Commande"
+msgstr "Naredba"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
-msgstr "Dossier de travail"
+msgstr "Radni direktorij"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<b>Application Settings</b>"
-msgstr "<b>Paramètres Application</b>"
+msgstr "<b>Postavke aplikacije</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Run in terminal"
-msgstr "Exécuter dans un terminal"
+msgstr "Pokreni u terminalu"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Use startup notification"
-msgstr "Utiliser la notification de démarrage"
+msgstr "Koristi upozorenje pri pokretanju"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Hide from menus"
-msgstr "Masquer depuis menus"
+msgstr "Sakrij od izbornika"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<b>Options</b>"
-msgstr "<b>Options</b>"
+msgstr "<b>Mogućnosti</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "label"
-msgstr "nom"
+msgstr "oznaka"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Delete this launcher..."
-msgstr "Supprimer ce lanceur ..."
+msgstr "Obriši ovaj pokretač..."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<small>Filename</small>"
-msgstr "<small>Nom de fichier</small>"
+msgstr "<small>Naziv-datoteke</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Accessories"
-msgstr "Accessoires"
+msgstr "Pomagala"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Development"
-msgstr "Développement"
+msgstr "Razvoj"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Education"
-msgstr "Éducation"
+msgstr "Edukacija"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Games"
-msgstr "Jeux"
+msgstr "Igre"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Graphics"
-msgstr "Infographie"
+msgstr "Grafika"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Internet"
@@ -215,19 +215,19 @@ msgstr "Internet"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Multimedia"
-msgstr "Multimédia"
+msgstr "Multimedija"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Office"
-msgstr "Bureau"
+msgstr "Ured"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Settings"
-msgstr "Paramètres"
+msgstr "Postavke"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "System"
-msgstr "Système"
+msgstr "Sustav"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "WINE"
@@ -235,46 +235,45 @@ msgstr "WINE"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "<b>Categories</b>"
-msgstr "<b>Catégories</b>"
+msgstr "<b>Kategorije</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "General Settings"
-msgstr "Paramètres généraux"
+msgstr "Opće postavke"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Quicklists"
-msgstr "Listes rapides"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Editor"
-msgstr "Éditeur"
+msgstr "Uređivač"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr "<big><b>Supprimer le lanceur ?</b></big>"
+msgstr "<big><b>Ukloni pokretač?</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
-"Êtes-vous sûr de vouloir supprimer ce lanceur ? Cela ne pourra pas être "
-"annulé."
+"Sigurno želite ukloniti ovaj pokretač?  Ova radnja se ne može poništiti."
 
 #: ../menulibre/MenulibreWindow.py:191
 msgid "Show"
-msgstr "Afficher"
+msgstr "Prikaži"
 
 #: ../menulibre/MenulibreWindow.py:244
 msgid "Image"
-msgstr "Image"
+msgstr "Slika"
 
 #: ../menulibre/MenulibreWindow.py:246
 msgid "Name"
-msgstr "Nom"
+msgstr "Naziv"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
-msgstr "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
+msgstr "Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
@@ -292,27 +291,27 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# This program is free software: you can redistribute it and/or modify it\n"
-"# under the terms of the GNU General Public License version 3, as published\n"
-"# by the Free Software Foundation.\n"
-"#\n"
-"# This program is distributed in the hope that it will be useful, but\n"
-"# WITHOUT ANY WARRANTY; without even the implied warranties of\n"
-"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR\n"
-"# PURPOSE. See the GNU General Public License for more details.\n"
-"#\n"
-"# You should have received a copy of the GNU General Public License along\n"
-"# with this program. If not, see <http://www.gnu.org/licenses/>.\n"
+"# Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
+"# Ovaj program je slobodan softver: možete ga redistribuirati i/ili\n"
+"# modificirati pod uvjetima GNU Opće javne licence inačice 3\n"
+"# objavljene od Fundacije slobodnog softvera.\n"
+"# \n"
+"# Ovaj program je distribuiran u nadi da će biti koristan, ali \n"
+"# BEZ IKAKVOG JAMSTVA; čak i bez podrazumjevanog jamstva ili\n"
+"# POGODNOSTI ZA ODREĐENU NAMJENU.\n"
+"# Pogledajte GNU Opću javnu licencu za više informacija.\n"
+"# \n"
+"# Trebali ste dobiti primjerak GNU Opće javne licence\n"
+"# uz ovaj program. Ako niste, pogledajte <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Afficher les messages de débogage (-vv débogue menulibre_lib aussi)"
+msgstr "Prikaži poruke otklanjanja greške (-vv debugs menulibre_lib also)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Éditeur de menus"
+msgstr "Uređivač izbornika"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Modifier les menus Système et Utilisateur avec facilité"
+msgstr "Uredite s lakoćom izbornike korisnika i sustava"
