--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,4 +1,4 @@
-# French translation for menulibre
+# Brazilian Portuguese translation for menulibre
 # Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
 # This file is distributed under the same license as the menulibre package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
@@ -8,34 +8,34 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-10-24 07:29-0400\n"
-"PO-Revision-Date: 2012-10-28 09:27+0000\n"
-"Last-Translator: mimilus <Unknown>\n"
-"Language-Team: French <fr@li.org>\n"
+"PO-Revision-Date: 2012-08-08 17:55+0000\n"
+"Last-Translator: Danillo <Unknown>\n"
+"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 14:44+0000\n"
+"X-Launchpad-Export-Date: 2012-11-25 14:40+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Sélectionner une icône"
+msgstr "Selecione um ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Nom de l'icône"
+msgstr "Nome do Ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Fichier Image"
+msgstr "Arquivo de Imagem"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Sélectionner une image"
+msgstr "Selecione uma Imagem"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Sélectionner une icône</b>"
+msgstr "<b>Selecione Ícone</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -59,11 +59,11 @@ msgstr "128x128"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "<b>Preview</b>"
-msgstr "<b>Aperçu</b>"
+msgstr "<b>Pré-Visualização</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Sélectionner une icône"
+msgstr "Selecione um ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -71,143 +71,143 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "_File"
-msgstr "_Fichier"
+msgstr "_Arquivo"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Ajouter un _Nouveau Lanceur"
+msgstr "Adicionar _Novo Lançador"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
-msgstr "_Éditer"
+msgstr "_Editar"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Help"
-msgstr "_Aide"
+msgstr "_Ajuda"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Contents"
-msgstr "_Contenus"
+msgstr "Conteúdo"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Add Launcher"
-msgstr "Ajouter un lanceur"
+msgstr "Adicionar Lançador"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Enregistrer toutes les modifications"
+msgstr "Salvar Todas as Mudanças"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
-msgstr "Enregistrer"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Annuler la dernière action"
+msgstr "Desfazer a última açãob"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
-msgstr "Annuler"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Rétablir la dernière action annulée"
+msgstr "Refazer a última ação desfeita"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
-msgstr "Répéter"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Revert all changes to last saved state"
-msgstr "Annuler toutes les modifications du dernier état sauvé"
+msgstr "Reverter todas as mudanças para o último estado salvo"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Réinitialiser"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
-msgstr "Catégorie"
+msgstr "Categoria"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
-msgstr "Application"
+msgstr "Aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "<b>No applications found.</b>"
-msgstr "<b>Pas d'application trouvée.</b>"
+msgstr "<b>Nenhum aplicativo encontrado.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Try searching everything."
-msgstr "Essayez de chercher tout."
+msgstr "Tente procurar por tudo."
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nom Application</b></big>"
+msgstr "<big><b>Nome do Aplicativo</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "<i>A quick snippet about your application.</i>"
-msgstr "<i>Un extrait rapide à propos de votre application.</i>"
+msgstr "<i>Uma rápida descrição de seu aplicativo.</i>"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Command"
-msgstr "Commande"
+msgstr "Comando"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
-msgstr "Dossier de travail"
+msgstr "Diretório de Trabalho"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<b>Application Settings</b>"
-msgstr "<b>Paramètres Application</b>"
+msgstr "<b>Configurações do Aplicativo</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Run in terminal"
-msgstr "Exécuter dans un terminal"
+msgstr "Executar no terminal"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Use startup notification"
-msgstr "Utiliser la notification de démarrage"
+msgstr "Usar notificação de inicialização"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Hide from menus"
-msgstr "Masquer depuis menus"
+msgstr "Esconder dos menus"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<b>Options</b>"
-msgstr "<b>Options</b>"
+msgstr "<b>Opções</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "label"
-msgstr "nom"
+msgstr "rótulo"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Delete this launcher..."
-msgstr "Supprimer ce lanceur ..."
+msgstr "Deletar este lançador..."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<small>Filename</small>"
-msgstr "<small>Nom de fichier</small>"
+msgstr "<small>Nome do Arquivo</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Accessories"
-msgstr "Accessoires"
+msgstr "Acessórios"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Development"
-msgstr "Développement"
+msgstr "Desenvolvimento"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Education"
-msgstr "Éducation"
+msgstr "Educação"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Games"
-msgstr "Jeux"
+msgstr "Jogos"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Graphics"
-msgstr "Infographie"
+msgstr "Gráficos"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Internet"
@@ -215,19 +215,19 @@ msgstr "Internet"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Multimedia"
-msgstr "Multimédia"
+msgstr "Multimídia"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Office"
-msgstr "Bureau"
+msgstr "Escritório"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Settings"
-msgstr "Paramètres"
+msgstr "Configurações"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "System"
-msgstr "Système"
+msgstr "Sistema"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "WINE"
@@ -235,42 +235,42 @@ msgstr "WINE"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "<b>Categories</b>"
-msgstr "<b>Catégories</b>"
+msgstr "<b>Categorias</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "General Settings"
-msgstr "Paramètres généraux"
+msgstr "Configurações Gerais"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Quicklists"
-msgstr "Listes rapides"
+msgstr "Lista de Atalhos"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Editor"
-msgstr "Éditeur"
+msgstr "Editor"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr "<big><b>Supprimer le lanceur ?</b></big>"
+msgstr "<big><b>Remover Lançador?</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
-"Êtes-vous sûr de vouloir supprimer ce lanceur ? Cela ne pourra pas être "
-"annulé."
+"Você tem certeza de que deseja remover este lançador? Esta ação não pode ser "
+"desfeita."
 
 #: ../menulibre/MenulibreWindow.py:191
 msgid "Show"
-msgstr "Afficher"
+msgstr "Exibir"
 
 #: ../menulibre/MenulibreWindow.py:244
 msgid "Image"
-msgstr "Image"
+msgstr "Imagem"
 
 #: ../menulibre/MenulibreWindow.py:246
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
@@ -293,26 +293,28 @@ msgid ""
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
 "# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# This program is free software: you can redistribute it and/or modify it\n"
-"# under the terms of the GNU General Public License version 3, as published\n"
-"# by the Free Software Foundation.\n"
-"#\n"
-"# This program is distributed in the hope that it will be useful, but\n"
-"# WITHOUT ANY WARRANTY; without even the implied warranties of\n"
-"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR\n"
-"# PURPOSE. See the GNU General Public License for more details.\n"
-"#\n"
-"# You should have received a copy of the GNU General Public License along\n"
-"# with this program. If not, see <http://www.gnu.org/licenses/>.\n"
+"# Este programa é software livre: você pode redistribuí-lo e/ou modificá-lo "
+"\n"
+"# sob os termos da Licença Pública Geral GNU versão 3, publicada pela\n"
+"# Free Software Foundation.\n"
+"# \n"
+"# Este programa é distribuído na esperança de que ele seja útil, mas \n"
+"# SEM QUALQUER GARANTIA; sem até mesmo as garantias implícitas de \n"
+"# COMERCIABILIDADE, QUALIDADE SATISFATÓRIA ou ADEQUAÇÃO A UM\n"
+"# PROPÓSITO PARTICULAR. Veja a Licença Pública Geral GNU para mais\n"
+"# detalhes.\n"
+"# \n"
+"# Você deve ter recebido uma cópia da Licença Pública Geral GNU junto\n"
+"# com este programa. Se não recebeu, veja <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Afficher les messages de débogage (-vv débogue menulibre_lib aussi)"
+msgstr "Exibir mensagens de depuração (também -vv debugs menulibre_lib)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Éditeur de menus"
+msgstr "Editor de Menus"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Modifier les menus Système et Utilisateur avec facilité"
+msgstr "Edite menus de sistema e de usuário com facilidade"
