--- a/po/ru.po
+++ b/po/ru.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-08-01 13:01-0400\n"
-"PO-Revision-Date: 2012-07-31 16:39+0000\n"
-"Last-Translator: Aleksey Kabanov <Unknown>\n"
+"POT-Creation-Date: 2012-10-24 07:29-0400\n"
+"PO-Revision-Date: 2012-11-17 16:30+0000\n"
+"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-06 19:40+0000\n"
-"X-Generator: Launchpad (build 15745)\n"
+"X-Launchpad-Export-Date: 2012-11-25 14:44+0000\n"
+"X-Generator: Launchpad (build 16293)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
@@ -23,15 +23,15 @@ msgstr "Выберите значок"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr ""
+msgstr "Название значка"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr ""
+msgstr "Файл изображения"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr ""
+msgstr "Выберите изображение"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
@@ -75,7 +75,7 @@ msgstr "_Файл"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr ""
+msgstr "Добавить _новую кнопку запуска"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
@@ -91,188 +91,186 @@ msgstr "_Содержание"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Add Launcher"
-msgstr ""
+msgstr "Добавить кнопку запуска"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
-msgid "toolbutton1"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save All Changes"
 msgstr "Сохранить все изменения"
 
-#: ../data/ui/MenulibreWindow.ui.h:22
-msgid "toolbutton3"
-msgstr ""
+#: ../data/ui/MenulibreWindow.ui.h:21
+msgid "Save"
+msgstr "Сохранить"
 
-#: ../data/ui/MenulibreWindow.ui.h:23
+#: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
 msgstr "Отменить последнее действие"
 
-#: ../data/ui/MenulibreWindow.ui.h:24
-msgid "toolbutton5"
-msgstr ""
+#: ../data/ui/MenulibreWindow.ui.h:23
+msgid "Undo"
+msgstr "Отменить"
 
-#: ../data/ui/MenulibreWindow.ui.h:25
+#: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
 msgstr "Вернуть последнее отменённое действие"
 
+#: ../data/ui/MenulibreWindow.ui.h:25
+msgid "Redo"
+msgstr "Повторить"
+
 #: ../data/ui/MenulibreWindow.ui.h:26
-msgid "toolbutton6"
-msgstr ""
+msgid "Revert all changes to last saved state"
+msgstr "Возвратить все изменения в последнее сохранённое состояние"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
-msgid "Revert all changes to last saved state"
-msgstr ""
+msgid "Revert"
+msgstr "Восстановить"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
-msgid "toolbutton9"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Category"
 msgstr "Категория"
 
-#: ../data/ui/MenulibreWindow.ui.h:30
+#: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
 msgstr "Приложение"
 
-#: ../data/ui/MenulibreWindow.ui.h:31
+#: ../data/ui/MenulibreWindow.ui.h:30
 msgid "<b>No applications found.</b>"
-msgstr ""
+msgstr "<b>Приложений не найдено.</b>"
+
+#: ../data/ui/MenulibreWindow.ui.h:31
+msgid "Try searching everything."
+msgstr "Поискать во всех категориях."
 
 #: ../data/ui/MenulibreWindow.ui.h:32
-msgid "Try searching everything."
-msgstr ""
+msgid "<big><b>Application Name</b></big>"
+msgstr "<big><b>Название приложения</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
-msgid "<big><b>Application Name</b></big>"
-msgstr ""
+msgid "<i>A quick snippet about your application.</i>"
+msgstr "<i>Краткие сведения о вашем приложении.</i>"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
-msgid "<i>A quick snippet about your application.</i>"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Command"
 msgstr "Команда"
 
-#: ../data/ui/MenulibreWindow.ui.h:36
+#: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
 msgstr "Рабочий каталог"
 
-#: ../data/ui/MenulibreWindow.ui.h:37
+#: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<b>Application Settings</b>"
 msgstr "<b>Параметры приложения</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:38
+#: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Run in terminal"
 msgstr "Запустить в терминале"
 
-#: ../data/ui/MenulibreWindow.ui.h:39
+#: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Use startup notification"
-msgstr ""
+msgstr "Использовать уведомление о запуске"
 
-#: ../data/ui/MenulibreWindow.ui.h:40
+#: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Hide from menus"
 msgstr "Скрыть из меню"
 
-#: ../data/ui/MenulibreWindow.ui.h:41
+#: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<b>Options</b>"
 msgstr "<b>Опции</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:42
+#: ../data/ui/MenulibreWindow.ui.h:41
 msgid "label"
-msgstr ""
+msgstr "метка"
+
+#: ../data/ui/MenulibreWindow.ui.h:42
+msgid "Delete this launcher..."
+msgstr "Удалить эту кнопку запуска…"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
-msgid "Delete this launcher..."
-msgstr ""
+msgid "<small>Filename</small>"
+msgstr "<small>Имя файла</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
-msgid "<small>Filename</small>"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Accessories"
 msgstr "Стандартные"
 
-#: ../data/ui/MenulibreWindow.ui.h:46
+#: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Development"
 msgstr "Средства разработки"
 
-#: ../data/ui/MenulibreWindow.ui.h:47
+#: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Education"
 msgstr "Образовательные"
 
-#: ../data/ui/MenulibreWindow.ui.h:48
+#: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Games"
 msgstr "Игры"
 
-#: ../data/ui/MenulibreWindow.ui.h:49
+#: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Graphics"
 msgstr "Графика"
 
-#: ../data/ui/MenulibreWindow.ui.h:50
+#: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Internet"
 msgstr "Интернет"
 
-#: ../data/ui/MenulibreWindow.ui.h:51
+#: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Multimedia"
 msgstr "Мультимедиа"
 
-#: ../data/ui/MenulibreWindow.ui.h:52
+#: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Office"
 msgstr "Офис"
 
-#: ../data/ui/MenulibreWindow.ui.h:53
+#: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Settings"
 msgstr "Настройки"
 
-#: ../data/ui/MenulibreWindow.ui.h:54
+#: ../data/ui/MenulibreWindow.ui.h:53
 msgid "System"
 msgstr "Системные"
 
-#: ../data/ui/MenulibreWindow.ui.h:55
+#: ../data/ui/MenulibreWindow.ui.h:54
 msgid "WINE"
 msgstr "WINE"
 
-#: ../data/ui/MenulibreWindow.ui.h:56
+#: ../data/ui/MenulibreWindow.ui.h:55
 msgid "<b>Categories</b>"
 msgstr "<b>Категории</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:57
+#: ../data/ui/MenulibreWindow.ui.h:56
 msgid "General Settings"
 msgstr "Общие настройки"
 
-#: ../data/ui/MenulibreWindow.ui.h:58
+#: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Quicklists"
-msgstr ""
+msgstr "Списки действий"
 
-#: ../data/ui/MenulibreWindow.ui.h:59
+#: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Editor"
 msgstr "Редактор"
 
-#: ../data/ui/MenulibreWindow.ui.h:60
+#: ../data/ui/MenulibreWindow.ui.h:59
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr ""
+msgstr "<big><b>Удалить кнопку запуска?</b></big>"
 
-#: ../data/ui/MenulibreWindow.ui.h:61
+#: ../data/ui/MenulibreWindow.ui.h:60
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
+"Вы уверены, что хотите удалить эту кнопку запуска?  Отменить это действие "
+"будет невозможно."
 
 #: ../menulibre/MenulibreWindow.py:191
 msgid "Show"
-msgstr ""
+msgstr "Показать"
 
 #: ../menulibre/MenulibreWindow.py:244
 msgid "Image"
-msgstr ""
+msgstr "Изображение"
 
 #: ../menulibre/MenulibreWindow.py:246
 msgid "Name"
-msgstr ""
+msgstr "Название"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
@@ -294,6 +292,21 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
+"# Авторские права © 2012 Sean Davis <smd.seandavis@gmail.com>\n"
+"# Это свободное программное обеспечение; вы можете распространять и/или "
+"изменять его \n"
+"# на условиях лицензии GNU General Public License версии 3, опубликованной \n"
+"# Фондом свободного программного обеспечения.\n"
+"# \n"
+"# Эта программа распространяется в надежде, что она будет полезной, но \n"
+"# БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ; даже без подразумеваемых гарантий \n"
+"# КОММЕРЧЕСКОЙ ВЫГОДЫ, УДОВЛЕТВОРИТЕЛЬНОГО КАЧЕСТВА или ПРИГОДНОСТИ ДЛЯ "
+"КОНКРЕТНОЙ \n"
+"# ЦЕЛИ. Для получения дополнительных сведений обратитесь к лицензии GNU "
+"General Public License.\n"
+"# \n"
+"# Вы должны были получить копию GNU General Public License \n"
+"# с этой программой. Если нет, смотрите <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
@@ -305,4 +318,4 @@ msgstr "Редактор меню"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr ""
+msgstr "Редактируйте системное и пользовательское меню с лёгкостью"
