--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.11.11) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 25 Nov 2012 09:56:15 -0500
+
 menulibre (12.11.10) precise; urgency=low
 
   * New release.
