--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.11.16) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 26 Nov 2012 05:26:43 -0500
+
 menulibre (12.11.15) precise; urgency=low
 
   * New release.
