--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.11.19) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 27 Nov 2012 05:21:43 -0500
+
 menulibre (12.11.18) precise; urgency=low
 
   * New release.
