--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.01.2) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Fri, 25 Jan 2013 21:09:26 -0500
+
 menulibre (13.01.1ubuntu1) UNRELEASED; urgency=low
 
   * Add comment tooltip to application iconview.
