--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.01.4) raring; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Fri, 25 Jan 2013 21:11:51 -0500
+
 menulibre (13.01.3) quantal; urgency=low
 
   * New release.
