--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-03-20 18:57-0400\n"
+"POT-Creation-Date: 2013-03-20 18:59-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -344,24 +344,23 @@ msgid "Search Results"
 msgstr ""
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
-msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
+msgid "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
 msgstr ""
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
-"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# This program is free software: you can redistribute it and/or modify it \n"
-"# under the terms of the GNU General Public License version 3, as "
-"published \n"
-"# by the Free Software Foundation.\n"
-"# \n"
-"# This program is distributed in the hope that it will be useful, but \n"
-"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
-"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
-"# PURPOSE.  See the GNU General Public License for more details.\n"
-"# \n"
-"# You should have received a copy of the GNU General Public License along \n"
-"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
+"Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"This program is free software: you can redistribute it and/or modify it \n"
+"under the terms of the GNU General Public License version 3, as published \n"
+"by the Free Software Foundation.\n"
+"\n"
+"This program is distributed in the hope that it will be useful, but \n"
+"WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"PURPOSE.  See the GNU General Public License for more details.\n"
+"\n"
+"You should have received a copy of the GNU General Public License along \n"
+"with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
 
 #: ../menulibre_lib/MenulibreXdg.py:45
