--- a/po/de.po
+++ b/po/de.po
@@ -1,16 +1,16 @@
-# Croatian translation for menulibre
-# Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
+# German translation for menulibre
+# Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
 # This file is distributed under the same license as the menulibre package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-26 05:20-0500\n"
-"PO-Revision-Date: 2012-11-29 13:43+0000\n"
-"Last-Translator: gogo <trebelnik2@gmail.com>\n"
-"Language-Team: Croatian <hr@li.org>\n"
+"PO-Revision-Date: 2013-01-15 23:19+0000\n"
+"Last-Translator: Jonatan Zeidler <Unknown>\n"
+"Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,23 +19,23 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Odaberi ikonu"
+msgstr "Symbol auswählen"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Naziv ikone"
+msgstr "Symbolname"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Datoteka slike"
+msgstr "Bilddatei"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Odaberi sliku"
+msgstr "Bild auswählen"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Odaberi Ikonu</b>"
+msgstr "<b>Symbol auswählen</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -59,11 +59,11 @@ msgstr "128x128"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "<b>Preview</b>"
-msgstr "<b>Pogled</b>"
+msgstr "<b>Vorschau</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Odaberi ikonu"
+msgstr "Symbol auswählen"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -71,143 +71,143 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "_File"
-msgstr "_Datoteka"
+msgstr "Datei"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Dodaj _novi pokretač"
+msgstr "Neuen Starter anlegen"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
-msgstr "_Uredi"
+msgstr "Bearbeiten"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Help"
-msgstr "_Pomoć"
+msgstr "Hilfe"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Contents"
-msgstr "_Sadržaj"
+msgstr "Hilfethemen"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Add Launcher"
-msgstr "Dodaj pokretač"
+msgstr "Starter hinzufügen"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Spremi sve promjene"
+msgstr "Alle Änderungen speichern"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
-msgstr "Spremi"
+msgstr "Speichern"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Poništi zadnju radnju"
+msgstr "Letzte Änderung rückgängig machen"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
-msgstr "Poništi"
+msgstr "Rückgängig machen"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Vrati zadnje poništenu radnju"
+msgstr "Die letzte Änderung wiederholen"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
-msgstr "Ponovi"
+msgstr "Wiederholen"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Revert all changes to last saved state"
-msgstr "Vrati sve stavke na posljednje spremljeno stanje"
+msgstr "Alle Änderungen zurücksetzen auf den letzten gespeicherten Stand"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Vrati izvorno"
+msgstr "Zurücksetzen"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
-msgstr "Kategorija"
+msgstr "Kategorie"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
-msgstr "Aplikacija"
+msgstr "Anwendung"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "<b>No applications found.</b>"
-msgstr "<b>Nema pronađenih aplikacija.</b>"
+msgstr "<b>Keine Anwendungen gefunden.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Try searching everything."
-msgstr "Probaj pretražiti sve."
+msgstr "Überall suchen"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Naziv aplikacije</b></big>"
+msgstr "<big><b>Name der Anwendung</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "<i>A quick snippet about your application.</i>"
-msgstr "<i>Kratak opis vaše aplikacije.</i>"
+msgstr "Kurzbeschreibung zur Anwendung"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Command"
-msgstr "Naredba"
+msgstr "Befehl"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
-msgstr "Radni direktorij"
+msgstr "Arbeitsverzeichnis"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<b>Application Settings</b>"
-msgstr "<b>Postavke aplikacije</b>"
+msgstr "Anwendungseinstellungen"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Run in terminal"
-msgstr "Pokreni u terminalu"
+msgstr "Im Terminal ausführen"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Use startup notification"
-msgstr "Koristi upozorenje pri pokretanju"
+msgstr "Nutze Startvisualisierung"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Hide from menus"
-msgstr "Sakrij od izbornika"
+msgstr "Im Menü verstecken"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<b>Options</b>"
-msgstr "<b>Mogućnosti</b>"
+msgstr "<b>Einstellungen</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "label"
-msgstr "oznaka"
+msgstr "Bezeichnung"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Delete this launcher..."
-msgstr "Obriši ovaj pokretač..."
+msgstr "Diesen Starter entfernen..."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<small>Filename</small>"
-msgstr "<small>Naziv-datoteke</small>"
+msgstr "<small>Datei</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Accessories"
-msgstr "Pomagala"
+msgstr "Zubehör"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Development"
-msgstr "Razvoj"
+msgstr "Entwicklung"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Education"
-msgstr "Edukacija"
+msgstr "Bildung"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Games"
-msgstr "Igre"
+msgstr "Spiele"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Graphics"
-msgstr "Grafika"
+msgstr "Grafik"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Internet"
@@ -215,19 +215,19 @@ msgstr "Internet"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Multimedia"
-msgstr "Multimedija"
+msgstr "Multimedia"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Office"
-msgstr "Ured"
+msgstr "Büro"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Settings"
-msgstr "Postavke"
+msgstr "Einstellungen"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "System"
-msgstr "Sustav"
+msgstr "System"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "WINE"
@@ -235,45 +235,46 @@ msgstr "WINE"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "<b>Categories</b>"
-msgstr "<b>Kategorije</b>"
+msgstr "<b>Kategorien</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "General Settings"
-msgstr "Opće postavke"
+msgstr "Grundeinstellungen"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Quicklists"
-msgstr ""
+msgstr "Tastenkürzel"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Editor"
-msgstr "Uređivač"
+msgstr "Editor"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr "<big><b>Ukloni pokretač?</b></big>"
+msgstr "<big><b>Starter entfernen?</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
-"Sigurno želite ukloniti ovaj pokretač?  Ova radnja se ne može poništiti."
+"Soll der Starter wirklich entfernt werden? Das kann nicht rückgängig gemacht "
+"werden."
 
 #: ../menulibre/MenulibreWindow.py:193
 msgid "Show"
-msgstr "Prikaži"
+msgstr "Anzeigen"
 
 #: ../menulibre/MenulibreWindow.py:246
 msgid "Image"
-msgstr "Slika"
+msgstr "Bild"
 
 #: ../menulibre/MenulibreWindow.py:248
 msgid "Name"
-msgstr "Naziv"
+msgstr "Name"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
-msgstr "Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
+msgstr "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
@@ -291,27 +292,30 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"# Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# Ovaj program je slobodan softver: možete ga redistribuirati i/ili\n"
-"# modificirati pod uvjetima GNU Opće javne licence inačice 3\n"
-"# objavljene od Fundacije slobodnog softvera.\n"
+"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
+"# This program is free software: you can redistribute it and/or modify it \n"
+"# under the terms of the GNU General Public License version 3, as published "
+"\n"
+"# by the Free Software Foundation.\n"
 "# \n"
-"# Ovaj program je distribuiran u nadi da će biti koristan, ali \n"
-"# BEZ IKAKVOG JAMSTVA; čak i bez podrazumjevanog jamstva ili\n"
-"# POGODNOSTI ZA ODREĐENU NAMJENU.\n"
-"# Pogledajte GNU Opću javnu licencu za više informacija.\n"
+"# This program is distributed in the hope that it will be useful, but \n"
+"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"# PURPOSE.  See the GNU General Public License for more details.\n"
 "# \n"
-"# Trebali ste dobiti primjerak GNU Opće javne licence\n"
-"# uz ovaj program. Ako niste, pogledajte <http://www.gnu.org/licenses/>.\n"
+"# You should have received a copy of the GNU General Public License along \n"
+"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Prikaži poruke otklanjanja greške (-vv debugs menulibre_lib also)"
+msgstr ""
+"Fehlerbehebungsmeldungen anzeigen (-vv hilft bei der Fehlerbehebung von "
+"menulibre_lib ebenso)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Uređivač izbornika"
+msgstr "Hauptmenü"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Uredite s lakoćom izbornike korisnika i sustava"
+msgstr "System- und Nutzermenüs einfach bearbeiten"
