--- a/po/ko.po
+++ b/po/ko.po
@@ -1,16 +1,16 @@
-# Croatian translation for menulibre
-# Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
+# Korean translation for menulibre
+# Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
 # This file is distributed under the same license as the menulibre package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-26 05:20-0500\n"
-"PO-Revision-Date: 2012-11-29 13:43+0000\n"
-"Last-Translator: gogo <trebelnik2@gmail.com>\n"
-"Language-Team: Croatian <hr@li.org>\n"
+"PO-Revision-Date: 2013-02-24 05:12+0000\n"
+"Last-Translator: Sang-hyeon Lee <Unknown>\n"
+"Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,23 +19,23 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Odaberi ikonu"
+msgstr "아이콘 선택"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Naziv ikone"
+msgstr "아이콘 이름"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Datoteka slike"
+msgstr "이미지 파일"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Odaberi sliku"
+msgstr "이미지 선택"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Odaberi Ikonu</b>"
+msgstr "<b>아이콘 선택</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -59,11 +59,11 @@ msgstr "128x128"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "<b>Preview</b>"
-msgstr "<b>Pogled</b>"
+msgstr "<b>미리보기</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Odaberi ikonu"
+msgstr "아이콘 선택"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -71,163 +71,163 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "_File"
-msgstr "_Datoteka"
+msgstr "파일(_F)"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Dodaj _novi pokretač"
+msgstr "새로운 런처 추가(_N)"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
-msgstr "_Uredi"
+msgstr "편집(_E)"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Help"
-msgstr "_Pomoć"
+msgstr "도움말(_H)"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Contents"
-msgstr "_Sadržaj"
+msgstr "목록(_C)"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Add Launcher"
-msgstr "Dodaj pokretač"
+msgstr "런처 추가"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Spremi sve promjene"
+msgstr "모든 변경 사항 저장하기"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
-msgstr "Spremi"
+msgstr "저장"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Poništi zadnju radnju"
+msgstr "마지막 실행을 되돌림"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
-msgstr "Poništi"
+msgstr "실행취소"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Vrati zadnje poništenu radnju"
+msgstr "가장 최근의 동작을 다시 실행"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
-msgstr "Ponovi"
+msgstr "재실행"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Revert all changes to last saved state"
-msgstr "Vrati sve stavke na posljednje spremljeno stanje"
+msgstr "가장 최근의 저장 상태로 되돌리기"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Vrati izvorno"
+msgstr "되돌리기"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
-msgstr "Kategorija"
+msgstr "카테고리"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
-msgstr "Aplikacija"
+msgstr "프로그램"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "<b>No applications found.</b>"
-msgstr "<b>Nema pronađenih aplikacija.</b>"
+msgstr "<b>프로그램을 찾을 수 없습니다.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Try searching everything."
-msgstr "Probaj pretražiti sve."
+msgstr "모든 사항을 검색합니다."
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Naziv aplikacije</b></big>"
+msgstr "<big><b>프로그램 이름</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "<i>A quick snippet about your application.</i>"
-msgstr "<i>Kratak opis vaše aplikacije.</i>"
+msgstr "<i>응용프로그램에 대한 빠른 미리보기</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Command"
-msgstr "Naredba"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
-msgstr "Radni direktorij"
+msgstr "작업중인 폴더"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<b>Application Settings</b>"
-msgstr "<b>Postavke aplikacije</b>"
+msgstr "<b>응용프로그램 설정</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Run in terminal"
-msgstr "Pokreni u terminalu"
+msgstr "터미널에서 실행"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Use startup notification"
-msgstr "Koristi upozorenje pri pokretanju"
+msgstr "시작 알림을 사용"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Hide from menus"
-msgstr "Sakrij od izbornika"
+msgstr "메뉴에서 숨기기"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<b>Options</b>"
-msgstr "<b>Mogućnosti</b>"
+msgstr "<b>옵션</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "label"
-msgstr "oznaka"
+msgstr "레이블"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Delete this launcher..."
-msgstr "Obriši ovaj pokretač..."
+msgstr "이 런처 삭제"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<small>Filename</small>"
-msgstr "<small>Naziv-datoteke</small>"
+msgstr "<small>파일이름</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Accessories"
-msgstr "Pomagala"
+msgstr "보조프로그램"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Development"
-msgstr "Razvoj"
+msgstr "개발"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Education"
-msgstr "Edukacija"
+msgstr "교육"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Games"
-msgstr "Igre"
+msgstr "게임"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Graphics"
-msgstr "Grafika"
+msgstr "그래픽"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Internet"
-msgstr "Internet"
+msgstr "인터넷"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Multimedia"
-msgstr "Multimedija"
+msgstr "멀티미디어"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Office"
-msgstr "Ured"
+msgstr "사무"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Settings"
-msgstr "Postavke"
+msgstr "설정"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "System"
-msgstr "Sustav"
+msgstr "시스템"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "WINE"
@@ -235,11 +235,11 @@ msgstr "WINE"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "<b>Categories</b>"
-msgstr "<b>Kategorije</b>"
+msgstr "<b>분류</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "General Settings"
-msgstr "Opće postavke"
+msgstr "일반 설정"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Quicklists"
@@ -247,33 +247,32 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Editor"
-msgstr "Uređivač"
+msgstr "편집기"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr "<big><b>Ukloni pokretač?</b></big>"
+msgstr "<big><b>런처를 제거합니까?</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
-msgstr ""
-"Sigurno želite ukloniti ovaj pokretač?  Ova radnja se ne može poništiti."
+msgstr "정말 이 런처를 삭제하길 원하십니까? 이 작업은 되돌릴 수 없습니다."
 
 #: ../menulibre/MenulibreWindow.py:193
 msgid "Show"
-msgstr "Prikaži"
+msgstr "보기"
 
 #: ../menulibre/MenulibreWindow.py:246
 msgid "Image"
-msgstr "Slika"
+msgstr "이미지"
 
 #: ../menulibre/MenulibreWindow.py:248
 msgid "Name"
-msgstr "Naziv"
+msgstr "이름"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
-msgstr "Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
+msgstr "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
@@ -291,27 +290,27 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"# Autorsko pravo (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# Ovaj program je slobodan softver: možete ga redistribuirati i/ili\n"
-"# modificirati pod uvjetima GNU Opće javne licence inačice 3\n"
-"# objavljene od Fundacije slobodnog softvera.\n"
+"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
+"# 이 프로그램은 자유 소프트웨어입니다. 당신은 자유소프트웨어재단의   \n"
+"# GNU General Public License version 3에 의거하여 프로그램을 \n"
+"# 수정하거나 재배포할 수 있습니다.\n"
 "# \n"
-"# Ovaj program je distribuiran u nadi da će biti koristan, ali \n"
-"# BEZ IKAKVOG JAMSTVA; čak i bez podrazumjevanog jamstva ili\n"
-"# POGODNOSTI ZA ODREĐENU NAMJENU.\n"
-"# Pogledajte GNU Opću javnu licencu za više informacija.\n"
+"# This program is distributed in the hope that it will be useful, but \n"
+"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"# PURPOSE.  See the GNU General Public License for more details.\n"
 "# \n"
-"# Trebali ste dobiti primjerak GNU Opće javne licence\n"
-"# uz ovaj program. Ako niste, pogledajte <http://www.gnu.org/licenses/>.\n"
+"# You should have received a copy of the GNU General Public License along \n"
+"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Prikaži poruke otklanjanja greške (-vv debugs menulibre_lib also)"
+msgstr "디버그 메시지 보여주기 (-vv debugs menulibre_lib also)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Uređivač izbornika"
+msgstr "메뉴 편집기"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Uredite s lakoćom izbornike korisnika i sustava"
+msgstr "쉽게 시스템 및 사용자메뉴 편집"
