--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.4) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 20 Mar 2013 21:51:34 -0400
+
 menulibre (13.03.3) precise; urgency=low
 
   * New release.
