--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.7) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 24 Mar 2013 10:03:53 -0400
+
 menulibre (13.03.6ubuntu1) UNRELEASED; urgency=low
 
   * Fix build errors on non-Ubuntu installations, update es locale.
